--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "name": "gamely-proxy",
   "version": "1.0.0",
   "description": "Proxy API server for Gamely",
-  "keywords": ["gamely", "server", "proxy", "api", "typescript", "express"],
+  "keywords": [
+    "gamely",
+    "server",
+    "proxy",
+    "api",
+    "typescript",
+    "express"
+  ],
   "author": "Coookei",
   "license": "MIT",
   "main": "server.ts",
@@ -12,13 +19,17 @@
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts"
   },
   "dependencies": {
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.34.9",
     "axios": "^1.9.0",
+    "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0"
   },
   "devDependencies": {
+    "@types/compression": "^1.8.0",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.21",
